--- a/index.html
+++ b/index.html
@@ -91,29 +91,29 @@
             </li>
             <li> <input type="checkbox" id="sedona" name="checkbox" checked><label for="sedona">Седона<i> ...</i></label>
               <ul>
-                <li><a href="../sedona/index.html">index.html</a></li>
-                <li><a href="../sedona/form.html">form.html</a></li>
-                <li><a href="../sedona/blog.html">blog.html</a></li>
-                <li><a href="../sedona/post.html">post.html</a></li>
-                <li><a href="../sedona/404.html">404.html</a></li>
+                <li><a href="../sedona-up/index.html">index.html</a></li>
+                <li><a href="../sedona-up/form.html">form.html</a></li>
+                <li><a href="../sedona-up/blog.html">blog.html</a></li>
+                <li><a href="../sedona-up/post.html">post.html</a></li>
+                <li><a href="../sedona-up/404.html">404.html</a></li>
               </ul>
             </li>
             <li> <input type="checkbox" id="pink" name="checkbox" checked><label for="pink">Pink<i> ...</i></label>
               <ul>
-                <li><a href="../pink/index.html">index.html</a></li>
-                <li><a href="../pink/form.html">form.html</a><br></li>
-                <li><a href="../pink/blog.html">blog.html</a><br></li>
-                <li><a href="../pink/post.html">post.html</a><br></li>
+                <li><a href="../86410-pink/index.html">index.html</a></li>
+                <li><a href="../86410-pink/form.html">form.html</a><br></li>
+                <li><a href="../86410-pink/blog.html">blog.html</a><br></li>
+                <li><a href="../86410-pink/post.html">post.html</a><br></li>
               </ul>
             </li>
             <li> <input type="checkbox" id="fudi" name="checkbox" checked><label for="fudi">Fudi<i> ...</i></label>
               <ul>
-                <li><a href="../fudi/index.html">index.html</a></li>
+                <li><a href="../Fudi/index.html">index.html</a></li>
               </ul>
             </li>
             <li> <input type="checkbox" id="modest" name="checkbox" checked><label for="modest">Modest<i> ...</i></label>
               <ul>
-                <li><a href="../modest/index.html">index.html</a></li>
+                <li><a href="../Modest/index.html">index.html</a></li>
               </ul>
             </li>
 
