--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Мои работы</title>
-    <meta name="description" content="Учебные работы dzn">
+    <title>Zurab Diakonashvili. Portfolio.</title>
+    <meta name="description" content="Zurab Diakonashvili. Portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       .games {
@@ -70,9 +70,9 @@
   </head>
   <body style="font-family: sans-serif;">
     <div>
-        <a class="games btn" href="_Games">Игры</a>
+<!--         <a class="games btn" href="_Games">Игры</a> -->
         <ul>
-            <li> <input type="checkbox" id="barbershop" name="checkbox" checked><label for="barbershop">Барбершоп<i> ...</i></label>
+            <li> <input type="checkbox" id="barbershop" name="checkbox" checked><label for="barbershop">Barbershop<i> ...</i></label>
               <ul>
                 <li><a href="../barbershop/index.html">index.html</a></li>
                 <li><a href="../barbershop/shop.html">shop.html</a><br></li>
@@ -80,7 +80,7 @@
                 <li><a href="../barbershop/price.html">price.html</a><br></li>
               </ul>
             </li>
-            <li> <input type="checkbox" id="tehnomart" name="checkbox" checked><label for="tehnomart">Техномарт<i> ...</i></label>
+            <li> <input type="checkbox" id="tehnomart" name="checkbox" checked><label for="tehnomart">Technomart<i> ...</i></label>
               <ul>
                 <li><a href="../technomart/index.html">index.html</a><br></li>
                 <li><a href="../technomart/catalog.html">catalog.html</a><br></li>
@@ -89,7 +89,7 @@
                 <li><a href="../technomart/map.html">map.html</a><br></li>
               </ul>
             </li>
-            <li> <input type="checkbox" id="sedona" name="checkbox" checked><label for="sedona">Седона<i> ...</i></label>
+            <li> <input type="checkbox" id="sedona" name="checkbox" checked><label for="sedona">Sedona<i> ...</i></label>
               <ul>
                 <li><a href="../sedona-up/index.html">index.html</a></li>
                 <li><a href="../sedona-up/form.html">form.html</a></li>
