--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                 <li><a href="../barbershop/shop.html">shop.html</a><br></li>
                 <li><a href="../barbershop/item.html">item.html</a><br></li>
                 <li><a href="../barbershop/price.html">price.html</a><br></li>
+                <li><a href="../barbershop/login.html">login.html</a><br></li>
+                <li><a href="../barbershop/map.html">map.html</a><br></li>
               </ul>
             </li>
             <li> <input type="checkbox" id="tehnomart" name="checkbox" checked><label for="tehnomart">Technomart<i> ...</i></label>
