--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                 <li><a href="../Modest/index.html">index.html</a></li>
               </ul>
             </li>
+            <li> <input type="checkbox" id="treehouse" name="checkbox" checked><label for="treehouse">Treehouse<i> ...</i></label>
+              <ul>
+                <li><a href="../Treehouse/index.html">index.html</a></li>
+              </ul>
+            </li>
 
         </ul>
     </div>
